added comments and removed unnecessary cells

--- a/egyptian_realestate_analysis-checkpoint.ipynb
+++ b/egyptian_realestate_analysis-checkpoint.ipynb
@@ -430,24 +430,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4acd61ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(df_model['bathrooms'].unique()[-1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "e6b9cfb0",
    "metadata": {},
@@ -839,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "d271915a",
    "metadata": {},
    "outputs": [
@@ -860,6 +842,7 @@
     }
    ],
    "source": [
+    "# limit the listings to under 5000 square feet\n",
     "df_model = df_model[df_model['size'] <= 5000]\n",
     "print(df_model.describe())"
    ]
